<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:orientation="vertical">
    <!--  tools:context="com.doram.DisplayMessageActivity$PlaceholderFragment"-->

    <TextView
        android:id="@+id/txtusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"  />
    
    <Button 
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:text="@string/addFaction" 
	    android:onClick="addFaction" />
    
    <Button 
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:text="@string/getFaction" 
	    android:onClick="getFaction" />
    
    <Button 
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:text="@string/getAllFactions" 
	    android:onClick="getAllFactions" />
    
    <Button 
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:text="@string/deleteFaction" 
	    android:onClick="deleteFactions" />
 
</LinearLayout>
